fixed some spacing and the active split cards

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -46,7 +46,7 @@
 }
 
 .split-card-button{
-  height: 100%;
+  min-height: 100%;
   background-color: $green;
   width: 20%;
   display: flex;
